[gd_scene load_steps=8 format=3 uid="uid://ba7r6u2oee1bq"]

[ext_resource type="Texture2D" uid="uid://bvt6u604xub0h" path="res://ball.png" id="1_3f7ck"]
[ext_resource type="Script" path="res://main.gd" id="1_pniiv"]
[ext_resource type="Texture2D" uid="uid://chojxn872s2jb" path="res://pad.png" id="3_i8yi5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkmcw"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rwuww"]
size = Vector2(118, 867.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bhdm"]
size = Vector2(1359, 90)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18tv4"]
size = Vector2(33.5, 192)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pniiv")

[node name="Ball" type="Area2D" parent="."]
position = Vector2(620, 360)
scale = Vector2(0.5, 0.5)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_wkmcw")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
texture = ExtResource("1_3f7ck")

[node name="ZoneOut" type="Area2D" parent="."]
monitorable = false

[node name="RightShape" type="CollisionShape2D" parent="ZoneOut"]
position = Vector2(1357, 352)
shape = SubResource("RectangleShape2D_rwuww")
debug_color = Color(0.757742, 0.295798, 0.859254, 0.42)

[node name="LeftShape" type="CollisionShape2D" parent="ZoneOut"]
position = Vector2(-119, 365)
shape = SubResource("RectangleShape2D_rwuww")
debug_color = Color(0.757742, 0.295798, 0.859254, 0.42)

[node name="VerticalLimit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VerticalLimit"]
position = Vector2(619, -25)
shape = SubResource("RectangleShape2D_7bhdm")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="VerticalLimit"]
position = Vector2(618.5, 751)
shape = SubResource("RectangleShape2D_7bhdm")

[node name="PlayerOne" type="Area2D" parent="."]
position = Vector2(64, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerOne"]
shape = SubResource("RectangleShape2D_18tv4")
debug_color = Color(0.921569, 0.14902, 0.588235, 0.615686)

[node name="Sprite2D" type="Sprite2D" parent="PlayerOne"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_i8yi5")

[node name="PlayerTwo" type="Area2D" parent="."]
position = Vector2(1176, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTwo"]
shape = SubResource("RectangleShape2D_18tv4")

[node name="Sprite2D" type="Sprite2D" parent="PlayerTwo"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_i8yi5")

[connection signal="area_entered" from="ZoneOut" to="." method="_on_horizontal_exit"]
[connection signal="area_entered" from="VerticalLimit" to="." method="_on_vertical_exit"]
[connection signal="area_entered" from="PlayerOne" to="." method="_on_horizontal_exit"]
[connection signal="area_entered" from="PlayerTwo" to="." method="_on_horizontal_exit"]
